        - Massive performance uplift
        - Easier to store/lookup elements by their ID
    - Updates to TempModifiers
        - Moved to the capabilities system
        - Much easier to add arguments
    - Added new events for compat mod developers to hook into:
        - TempModifierEvent.Add
            - Called when a TempModifier modifier is added to a player
            - Cancellable
            - Allows for changing arguments, enabling/disabling duplicates, and changing the modifier type
        - TempModifierEvent.Remove
            - Called when a TempModifier is removed from a player
            - Cancellable
        - TempModifierEvent.Init
            - Called when the registry of TempModifiers or BlockEffects is being built
            - Allows for injection of custom TempModifiers and BlockEffects
            - If you call this event manually, use getPool().flush() beforehand to prevent duplicate entries (lag)
    - The Hearth now uses the capability system instead of NBT
            - This should increase performance and prevent issues with the NBT data limit on some servers
    - "fuel_items.toml" config file changes:
        - Renamed to "item_settings.toml" to better indicate that it also includes insulation items
        - Insulation items (for the sewing table) and armor items with innate insulation are now defined separately
    - Added new translation keys:
        - "entity.player.damage.freeze" (The subtitle for when the player takes cold damage) (will be added next update)
        - "item.cold_sweat.soulfire_lamp" (The name of the Soulfire Lamp item)
    - Fixed a bug that would sometimes cause extreme lag when searching for temperature-affecting blocks
    - Removed some defunct recipes that would throw errors in server consoles


TO-DO
- Added screen effects when the player is hot or cold, helped in large part by Softi on our Discord server
- Added new sounds for when the player is freezing